apply scroll indicator to breadcrumbs element to avoid overflow onto scrollbar

--- a/static-build/components/Breadcrumbs/styles.css
+++ b/static-build/components/Breadcrumbs/styles.css
@@ -50,3 +50,36 @@
     }
   }
 }
+
+@media screen and (max-width: 550px) {
+  .breadcrumbs {
+    &::before,
+    &::after {
+      content: '';
+      position: fixed;
+      height: var(--spacing-6);
+      width: var(--spacing-3);
+      z-index: 1;
+    }
+
+    &::before {
+      left: 0;
+      background-image: linear-gradient(
+        to right,
+        white,
+        75%,
+        hsl(0 0% 100% / 0%)
+      );
+    }
+
+    &::after {
+      right: 0;
+      background-image: linear-gradient(
+        to left,
+        white,
+        75%,
+        hsl(0 0% 100% / 0%)
+      );
+    }
+  }
+}
