--- a/static-build/shared/styles/header.css
+++ b/static-build/shared/styles/header.css
@@ -9,38 +9,6 @@ header {
   & > section {
     position: relative;
 
-    @media (orientation: portrait) {
-      &::before,
-      &::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        z-index: 1;
-        width: var(--spacing-3);
-        height: 100%;
-      }
-
-      &::before {
-        left: 0;
-        background-image: linear-gradient(
-          to right,
-          white,
-          75%,
-          hsl(0 0% 100% / 0%)
-        );
-      }
-
-      &::after {
-        right: 0;
-        background-image: linear-gradient(
-          to left,
-          white,
-          75%,
-          hsl(0 0% 100% / 0%)
-        );
-      }
-    }
-
     & > div {
       display: flex;
       justify-content: space-between;
